# orion_analysis_pipeline

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  runtime_logging.py
configurations/: CRC33_01.yaml  colorectal_cancer_33_01.yaml
notebooks/: 01_explore_readouts.ipynb
orion/: annotation.py  configuration.py  data_models.py  image_metadata.py  input_output.py  normalization.py  preprocessing.py  quality_control.py  quantification.py  region_of_interest.py  segmentation.py  spatial_analysis.py
src/: annotation.py  configuration.py  constants.py  data_models.py  io.py  logging.py  pipeline.py  preprocessing.py  quality_control.py  quantification.py  region_of_interest.py  segmentation.py  spatial_analysis.py
tests/: test_annotation.py  test_configuration.py  test_main.py  test_pipeline.py  test_preprocessing.py  test_quantification.py  test_region_of_interest.py  test_segmentation.py  test_spatial_analysis.py
